--- a/template.html
+++ b/template.html
@@ -10,6 +10,7 @@
     <body class="h-100">
         <div id="app" class="h-100"></div>
         <!-- Many of bootstrap components require the use of JavaScript to function -->
+        <script src="https://kit.fontawesome.com/068c9ebb02.js" crossorigin="anonymous"></script>
         <!-- Popper and BootStrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
